@@ -260,6 +260,7 @@ upgrade.caption.detected=A JAMWiki friss\u00EDt\u00E9s\u00E9nek telep\u00EDt\u00
 upgrade.caption.upgradecomplete=Friss\u00EDt\u00E9s k\u00E9sz.  Az esetleges hiba\u00FCzeneteket lentebb tal\u00E1lod.
 upgrade.caption.upgradefailed=The upgrade has failed.  Please see below and check the logs for any failure messages, and consult the UPGRADE.txt document for details on how to perform a manual upgrade.  Please report this error at <a href\="http\://jamwiki.org/"> jamwiki.org</a> and provide any relevant information in the bug report.
 upgrade.error.notrequired=Jelenleg nincs sz\u00FCks\u00E9g friss\u00EDt\u00E9sre.
+upgrade.error.oldversion=Upgrading to version {0} from versions older than {1} is not supported.
 upgrade.title=Friss\u00EDt\u00E9s
 upload.error.directorycreate=Nem lehet elk\u00E9sz\u00EDteni a felt\u00F6lt\u00E9si k\u00F6nyvt\u00E1rat\: {0}.
 upload.error.filename=Hib\u00E1s f\u00E1jln\u00E9v.
