@@ -260,6 +260,7 @@ upgrade.caption.detected=Uaktualnienie JAMWiki zosta\u0142o zainstalowane.  Zarc
 upgrade.caption.upgradecomplete=Upgrade zako\u0144czony powodzeniem.<br />{0}
 upgrade.caption.upgradefailed=The upgrade has failed.  Please see below and check the logs for any failure messages, and consult the UPGRADE.txt document for details on how to perform a manual upgrade.  Please report this error at <a href\="http\://jamwiki.org/"> jamwiki.org</a> and provide any relevant information in the bug report.
 upgrade.error.notrequired=Upgrade nie jest potrzebny.
+upgrade.error.oldversion=Upgrading to version {0} from versions older than {1} is not supported.
 upgrade.title=Uaktualnienie (upgrade)
 upload.error.directorycreate=Nie mo\u017Cna utworzy\u0107 katalogu do wysy\u0142ania plik\u00F3w {0}.
 upload.error.filename=Niepoprawna nazwa pliku.
