@@ -261,6 +261,7 @@ upgrade.caption.detected=\u4e00\u4e2aJAMWiki\u7684\u5347\u7ea7\u5305\u5df2\u7ecf
 upgrade.caption.upgradecomplete=\u5347\u7ea7\u5b8c\u6210\uff0c\u4e0b\u9762\u662f\u4ea7\u751f\u9519\u8bef\u7684\u4fe1\u606f\u3002<br />{0}
 upgrade.caption.upgradefailed=The upgrade has failed.  Please see below and check the logs for any failure messages, and consult the UPGRADE.txt document for details on how to perform a manual upgrade.  Please report this error at <a href="http://jamwiki.org/"> jamwiki.org</a> and provide any relevant information in the bug report.
 upgrade.error.notrequired=\u5f53\u524d\u7248\u672c\u5fc5\u987b\u7684\u6587\u4ef6\u6ca1\u6709\u5347\u7ea7\u3002
+upgrade.error.oldversion=Upgrading to version {0} from versions older than {1} is not supported.
 upgrade.title=\u5347\u7ea7
 upload.error.directorycreate=\u4e0d\u80fd\u521b\u5efa\u4e0a\u4f20\u76ee\u5f55 {0}\u3002
 upload.error.filename=\u65e0\u6548\u7684\u6587\u4ef6\u540d\u3002
