@@ -261,6 +261,7 @@ upgrade.caption.detected=\u4e00\u500bJAMWiki\u7684\u5347\u7d1a\u5305\u5df2\u7d93
 upgrade.caption.upgradecomplete=\u5347\u7d1a\u5b8c\u6210\uff0c\u4e0b\u9762\u662f\u7522\u751f\u932f\u8aa4\u7684\u4fe1\u606f\u3002<br />{0}
 upgrade.caption.upgradefailed=The upgrade has failed.  Please see below and check the logs for any failure messages, and consult the UPGRADE.txt document for details on how to perform a manual upgrade.  Please report this error at <a href="http://jamwiki.org/"> jamwiki.org</a> and provide any relevant information in the bug report.
 upgrade.error.notrequired=\u7576\u524d\u7248\u672c\u5fc5\u9808\u7684\u6587\u4ef6\u6c92\u6709\u5347\u7d1a\u3002
+upgrade.error.oldversion=Upgrading to version {0} from versions older than {1} is not supported.
 upgrade.title=\u5347\u7d1a
 upload.error.directorycreate=\u4e0d\u80fd\u5275\u5efa\u4e0a\u50b3\u76ee\u9304 {0}\u3002
 upload.error.filename=\u7121\u6548\u7684\u6587\u4ef6\u540d\u3002
